infra/kubeflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
  labels:
    name: ml-pipeline-ui
  annotations:
    cert-manager.io/cluster-issuer: dns-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.244.0.0/16,192.168.0.0/24
spec:
  ingressClassName: nginx
  rules:
    - host: kubeflow.internal.roxxas96.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  name: http
  tls:
    - hosts:
        - kubeflow.internal.roxxas96.net
      secretName: ml-pipeline-ui-tls
